--- a/Dockerfile.testing
+++ b/Dockerfile.testing
@@ -1,8 +1,8 @@
 FROM alpine:3.15
 RUN apk add --no-cache gcc make musl-dev clang-extra-tools python3
 
-COPY . /app/data-compression
-WORKDIR /app/data-compression
+COPY . /app/project
+WORKDIR /app/project
 
 RUN make test
 RUN make integrationtest
